# c-

./: CMakeLists.txt  awesom_linux_commands.md  common_Syntax.cpp  concepts_left_to_read.txt  concepts_to_keep_in_mind.txt  core_mapping.txt
.cph/: .A_Quintomania.cpp_526e62c60e7be56944a9e2ca97621277.prob  .B_Make_Almost_Equal_With_Mod.cpp_18927f0f007da110c0671d7a6c35c230.prob
Arguments/: main.cpp
FriendFunction/: main  main.cpp  main2.cpp
Fucntion_pointers/: main  main.cpp
Inheritence/: Definations.cpp  Makefile  inheritanceInterface.h  main.cpp  whatsInit.md
Multithreading/: CMakeLists.txt  cppNutsLecture1  cppNutsLecture1.cpp  seekh.md  seekh.txt
NG/: CMakeLists.txt  main.cpp  main_sor.cpp
PolymorphismSystemD/: employee.h  main.cpp
Templates/: CMakeLists.txt  main.cpp
Threadpool/: CMakeLists.txt  context_switches_and_cpu_usage.cpp  main.cpp  seekh.md
callback_model/: CMakeLists.txt  KillSwitch.hpp  algo.cpp  algo.hpp  algo2.cpp  algo2.hpp  callback_model.cpp  main.cpp  ng_sdk.cpp  ng_sdk.hpp
compilationProcess/: asd.cpp  asd.s  postProcess2.cpp  whatsInit.md
error_code/: CMakeLists.txt  enums.h  main  main.cpp
grpc/: CMakeLists.txt  greeter_client.cc  greeter_server.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  helloworld.proto
namespace/: CMakeLists.txt  main.cpp  ns.cpp  nsExtend.cpp
order_routing _simulator/: CMEOrderProcessor.cpp  CMEOrderProcessor.h  CMakeLists.txt  ICEOrderProcessor.cpp  ICEOrderProcessor.h  IOrderInterface.h  config.cpp  config.h  config.json  error_code.h  main.cpp  orsEngine.cpp  orsEngine.h
(+22 files in other folders)
